global box-sizing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     </head>
     <body>
-        <header id="header-primary-wrapper">
+        <header id="header-primary-wrapper" data-start="apres-hero">
             <div id="header-primary" class="container flex flex-between flex-vcenter">
 
                 <div id="logo">
