nav-list class added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
 
                 <nav id="nav-primary">
-                    <ul class="flex">
+                    <ul class="nav-list flex">
                         <li><a href="#" target="_self" class="scroll-to-link">Home</a></li>
                         <li><a href="#" target="_self" class="scroll-to-link">Grid</a></li>
                     </ul>
