Navbar updated ans smooth scrolling via css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
 
         <header id="header-primary-wrapper">
-            <div id="header-primary" class="container flex flex-between flex-vcenter hidden">
+            <div id="header-primary" data-pos="on-hero" class="container flex flex-between flex-vcenter hidden">
 
                 <!-- LOGO -->
                 <div id="logo">
@@ -28,8 +28,8 @@
                 <!-- NAVIGATION -->
                 <nav id="nav-primary">
                     <ul class="nav-list flex">
-                        <li><a href="#" target="_self" class="scroll-to-link">Home</a></li>
-                        <li><a href="#" target="_self" class="scroll-to-link">Grid</a></li>
+                        <li class="nav-list-item"><a href="#" target="_self" class="scroll-to-link">Home</a></li>
+                        <li class="nav-list-item"><a href="#" target="_self" class="scroll-to-link">Grid</a></li>
                     </ul>
                 </nav>
 
