set data-pos before onload

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </head>
     <body>
 
-        <header id="header-primary-wrapper">
-            <div id="header-primary" data-pos="on-hero" class="container flex flex-between flex-vcenter hidden">
+        <header id="header-primary-wrapper" data-pos="on-hero">
+            <div id="header-primary" class="container flex flex-between flex-vcenter hidden">
 
                 <!-- LOGO -->
                 <div id="logo">
